--- a/res/layout/list_device.xml
+++ b/res/layout/list_device.xml
@@ -4,29 +4,15 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/tvList2label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="2sp"
         android:gravity="right"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/tvList2label1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2sp"
-            android:text="firstTime (sessionCount)"
-            android:textSize="10sp" />
-
-        <TextView
-            android:id="@+id/tvList2label2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2sp"
-            android:text="lastTime avgRssi [address]"
-            android:textSize="10sp" />
-
-    </LinearLayout>
+        android:paddingRight="4dp"
+        android:text="firstTime (sessionCount)\n&lt;br>second line of info text"
+        android:textSize="10sp" />
 
     <TextView
         android:id="@+id/tvList2names"
