--- a/res/layout/list_session.xml
+++ b/res/layout/list_session.xml
@@ -13,20 +13,16 @@
         android:text="#id, duration"
         android:textSize="10sp" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/tvList3label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/tvList3label"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:text="startTime\nstopTime"
-            android:textSize="10sp" />
-
-    </LinearLayout>
+        android:layout_gravity="center_vertical"
+        android:gravity="center_vertical"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:text="startTime\nstopTime"
+        android:textSize="10sp" />
 
     <TextView
         android:id="@+id/tvList3names"
