--- a/res/layout/list_sighting.xml
+++ b/res/layout/list_sighting.xml
@@ -2,13 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="0dp" >
 
     <TextView
         android:id="@+id/tvList1label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="2sp"
+        android:padding="0dp"
         android:text="id (sessionId) time [address] -db"
         android:textSize="10sp" />
 
@@ -18,6 +20,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:layout_margin="2sp"
-        android:text="name" />
+        android:padding="0dp"
+        android:text="name"
+        android:textSize="11sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
