--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -118,6 +118,15 @@
                 android:text="@string/btExport"
                 android:textSize="12sp" />
 
+            <Button
+                android:id="@+id/btExit"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:height="24dp"
+                android:padding="6dp"
+                android:text="@string/btExit"
+                android:textSize="12sp" />
+
         </LinearLayout>
 
     </LinearLayout>
