--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -30,6 +30,15 @@
             android:text="@string/cbAutoString"
             android:textSize="12sp" />
 
+        <Button
+            android:id="@+id/btExit"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:height="24dp"
+            android:padding="6dp"
+            android:text="@string/btExit"
+            android:textSize="12sp" />
+
     </LinearLayout>
 
     <LinearLayout
