--- a/res/layout/dialog_export.xml
+++ b/res/layout/dialog_export.xml
@@ -8,7 +8,17 @@
         android:id="@+id/tvExportConfirmation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:text="@string/tvExportConfirmation" />
+
+    <EditText
+        android:id="@+id/etExportTarget"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:hint="@string/etExportTargetHint" />
 
     <LinearLayout
         android:layout_width="match_parent"
