--- a/res/layout/activity_list.xml
+++ b/res/layout/activity_list.xml
@@ -8,6 +8,15 @@
     android:orientation="vertical"
     tools:context="com.example.a09_blauzahn.ActivityListView" >
 
+    <TextView
+        android:id="@+id/tvListLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:padding="4dp"
+        android:text="TextView" />
+
     <Button
         android:id="@+id/btCloseList"
         android:layout_width="match_parent"
