--- a/res/layout/dialog_listitem_btdevice.xml
+++ b/res/layout/dialog_listitem_btdevice.xml
@@ -6,6 +6,13 @@
     android:gravity="center_horizontal"
     android:orientation="vertical" >
 
+    <TextView
+        android:id="@+id/tvBTDeviceLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textSize="12sp" />
+
     <Button
         android:id="@+id/btBTDeviceSightings"
         android:layout_width="wrap_content"
