--- a/res/layout/dialog_listitem_btsighting.xml
+++ b/res/layout/dialog_listitem_btsighting.xml
@@ -9,6 +9,7 @@
         android:id="@+id/tvBTSightingLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:padding="4dp"
         android:text="TextView"
         android:textSize="12sp" />
