--- a/res/layout/activity_calendar.xml
+++ b/res/layout/activity_calendar.xml
@@ -21,7 +21,8 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:padding="4dp"
-            android:text="@string/tvCalendarLabel" />
+            android:text="@string/tvCalendarLabel"
+            android:textSize="12sp" />
 
         <TimePicker
             android:id="@+id/timePicker"
@@ -40,7 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:text="@string/tvCalendarDifference" />
+            android:text="@string/tvCalendarDifference"
+            android:textSize="12sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
