--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -8,5 +8,7 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
+    <item android:id="@+id/action_check_wifi" android:title="@string/cbWifi" android:icon="@android:drawable/ic_menu_share"></item>
+    <item android:id="@+id/action_check_auto" android:title="@string/cbAutoString" android:icon="@android:drawable/ic_menu_rotate"></item>
 
 </menu>
