--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -7,8 +7,8 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never"/>
-    <item android:id="@+id/action_check_wifi" android:title="@string/cbWifi" android:icon="@android:drawable/ic_menu_share"></item>
-    <item android:id="@+id/action_check_auto" android:title="@string/cbAutoString" android:icon="@android:drawable/ic_menu_rotate"></item>
+        app:showAsAction="never" android:enabled="false"/>
+    <item android:id="@+id/action_check_wifi" android:title="@string/cbWifi" android:icon="@android:drawable/ic_menu_share" android:checkable="true" android:enabled="true" android:visible="true"></item>
+    <item android:id="@+id/action_check_auto" android:title="@string/cbAutoString" android:icon="@android:drawable/ic_menu_rotate" android:checkable="true" android:enabled="true" android:visible="true"></item>
 
 </menu>
