--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -4,11 +4,13 @@
     tools:context="com.example.a09_blauzahn.MainActivity" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/menu_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
-    <item android:id="@+id/action_check_wifi" android:title="@string/cbWifi" android:icon="@android:drawable/ic_menu_share"></item>
-    <item android:id="@+id/action_check_auto" android:title="@string/cbAutoString" android:icon="@android:drawable/ic_menu_rotate"></item>
+    <item android:id="@+id/menu_check_wifi" android:title="@string/cbWifi" android:icon="@android:drawable/ic_menu_share">
+    </item>
+    <item android:id="@+id/menu_check_auto" android:title="@string/cbAutoString" android:icon="@android:drawable/ic_menu_rotate"></item>
+    <item android:id="@+id/menu_check_bt" android:title="@string/cbBt" android:enabled="true" android:visible="true" android:checkable="true"></item>
 
 </menu>
