--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -11,7 +11,7 @@
     tools:context="com.example.a09_blauzahn.ActivityMain" >
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="284dp"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
@@ -76,6 +76,32 @@
                 android:layout_height="36dp"
                 android:padding="6dp"
                 android:text="@string/btShowBtSessions"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <Button
+                android:id="@+id/btShowWifiSessions"
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:text="@string/btShowWifiSessions"
+                android:textSize="12sp" />
+
+            <Button
+                android:id="@+id/btShowWifiDevices"
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:text="@string/btShowWifiDevices"
+                android:textSize="12sp" />
+
+            <Button
+                android:id="@+id/btShowWifiSightings"
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:text="@string/btShowWifiSightings"
                 android:textSize="12sp" />
         </LinearLayout>
 
