--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -161,6 +161,33 @@
                 android:textSize="12sp" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <Button
+                android:id="@+id/btShowWifiSightings"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:text="@string/btShowWifiSightings"
+                android:textSize="12sp" />
+
+            <Button
+                android:id="@+id/btShowWifiDevices"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:text="@string/btShowWifiDevices"
+                android:textSize="12sp" />
+
+            <Button
+                android:id="@+id/btShowWifiSessions"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:text="@string/btShowWifiSessions"
+                android:textSize="12sp" />
+        </LinearLayout>
+
     </LinearLayout>
 
     <ScrollView
