--- a/res/layout/list_wifisighting.xml
+++ b/res/layout/list_wifisighting.xml
@@ -1,28 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="0dp" >
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/tvList1label"
+        android:id="@+id/tvList5label1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2sp"
-        android:padding="0dp"
-        android:text="id (sessionId) time [address] -db"
-        android:textSize="10sp" />
+        android:paddingLeft="4dp"
+        android:text="#id (#session) timestamp [address] avg.db" />
 
     <TextView
-        android:id="@+id/tvList1name"
+        android:id="@+id/tvList5label2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:layout_marginTop="-8sp"
         android:paddingRight="4dp"
-        android:text="name"
-        android:textSize="11sp"
-        android:textStyle="bold" />
+        android:text="name(s)" />
 
 </LinearLayout>
